{
    "name": "MainMenu",
    "maps": [
        {
            "name": "MenuContol",
            "id": "7be4416b-e4cb-412b-8239-1439abde28d1",
            "actions": [
                {
                    "name": "ConfirmSelection",
                    "type": "Button",
                    "id": "35f9cf69-abd0-46c2-93bc-f4561f59510b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3774dcf3-1cc6-4b71-91ba-b937840d735c",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}